{
    "name": "InputMaster",
    "maps": [
        {
            "name": "PlayerInputs",
            "id": "541312a2-7183-4d32-8cb5-f0f7970d8854",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "c1b84f64-9ed1-4350-9f6a-867807c7b9f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "3a0b43e4-6cf5-4b8f-be4d-b8fd1df249f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "touchPosition",
                    "type": "Value",
                    "id": "d5c98fc8-b172-41c8-80d7-311e44282ad2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "clickPosition",
                    "type": "Value",
                    "id": "88777fac-f2c0-4df7-aa61-84500a4c9ce8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40da3fb6-e414-4572-bcc9-99c609b58d02",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";click",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfce0c45-a537-48b3-8317-4c4c9af289a7",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Screen",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df60956a-1220-4d52-adcc-907f0d303162",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3d80024-0584-4156-b3ed-c13e4de632bd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";click",
                    "action": "clickPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pathfinding",
            "id": "cd43508b-fbf2-4675-9780-e8c2d89f731d",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "62d4b9ec-232b-42ff-bc6b-cf15f5ee27e3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClickPosition",
                    "type": "Value",
                    "id": "05d2948b-c323-4c9c-89a9-5f5c54c390dd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "facd5e04-cc96-4a64-b0e7-47b0532cfca6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClickPosition",
                    "type": "Value",
                    "id": "a79d8edc-eab9-490d-a9a7-49ec72a8ec12",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e232dad4-8aa6-4957-a752-2bbbdc70cdbf",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc154c11-7778-46a8-9261-cd77a5a1a584",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8053b837-2011-4dbf-b18a-a3284104aa6f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a739125a-fa40-4bae-9aed-59afe93e448d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClickPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "click",
            "bindingGroup": "click",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Screen",
            "bindingGroup": "Screen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}